--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-42722924-1', 'jetclips.herokuapp.com');
+    ga('create', 'UA-48307386-1', 'mikechau.github.io');
     ga('send', 'pageview');
   </script>
 
