--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width">
-
+  <base href="http://mikechau.github.com/jetclips" />
   <title>Jetclips: Videos when you gogo</title>
   
   <link href="//vjs.zencdn.net/4.3/video-js.css" rel="stylesheet">
-  <link rel="stylesheet" href="stylesheets/vendor.css">
-  <link rel="stylesheet" href="stylesheets/app.css">
+  <link rel="stylesheet" href="/stylesheets/vendor.css">
+  <link rel="stylesheet" href="/stylesheets/app.css">
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -27,9 +27,9 @@
 
   <div id="jetclips-container"></div>
 
-  <script src="javascripts/vendor.js"></script>
+  <script src="/javascripts/vendor.js"></script>
   <script src="//vjs.zencdn.net/4.3/video.js"></script>
-  <script src="javascripts/app.js"></script>
+  <script src="/javascripts/app.js"></script>
   <script>require('initialize');</script>
   
 </body>
