--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width">
-  <base href="http://mikechau.github.com/jetclips" />
+  <base href="http://mikechau.github.com/jetclips/" />
   <title>Jetclips: Videos when you gogo</title>
   
   <link href="//vjs.zencdn.net/4.3/video-js.css" rel="stylesheet">
