--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width">
   <title>Jetclips: Videos when you gogo</title>
-  
+
+  <base href="http://mikechau.github.io/jetclips/" /> 
+ 
   <link href="//vjs.zencdn.net/4.3/video-js.css" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/vendor.css">
   <link rel="stylesheet" href="stylesheets/app.css">
